--- a/content/blog/boost-workflow-vscode-snippets/index.mdx
+++ b/content/blog/boost-workflow-vscode-snippets/index.mdx
@@ -10,9 +10,9 @@ next: /vscode-shortcuts-boost-productivity/
 
 Typing every single character of your code can feel cumbersome. How many times did you declare a function? Created an object? Imported a module? Created a for loop? Created a component if you're a React or Vue developer? I don't even know how many times I did it, but I think the numbers would be pretty scary 😱
 
-Luckily for us, our favorite code editor, VS Code, has the ability to provide us user snippets to avoid typing all this code manually. For example, you can download these snippets as package extension and then, you're able to write code in no time! But what if you find yourself typing a code that no extension provides? What if you have specific conventions or objects you use in your team? Do you have no other choices than doing this chore?
+Luckily for us, our favorite code editor, VS Code, can provide us user snippets to avoid typing all this code manually. For example, you can download these snippets as package extensions and then, you're able to write code in no time! But what if you find yourself typing a code that no extension provides? What if you have specific conventions or objects you use in your team? Do you have no other choice than to do this chore?
 
-**No.** You can define custom user snippets and that's an easy task! 😌
+**No.** You can define custom user snippets, and that's an easy task! 😌
 
 ### Create a snippet
 
@@ -24,7 +24,7 @@ Select the language for which you're going to create a snippet file. Here we're 
 
 ![Selecting a language for the snippet file](./list-code.png)
 
-VS Code should open a new file with some informations on how to create a snippet. How nice is this? With this first example, you learn that:
+VS Code should open a new file with some information on how to create a snippet. How nice is this? With this first example, you learn that:
 
 - A snippet has a name, a prefix, a description and a body. The prefix represents the characters you need to type to trigger the snippet.
 - The body is an array, each element defining a line.
@@ -57,7 +57,7 @@ You'll probably want to start a new line after logging. To create such a snippet
 Here, we defined two lines in `body`:
 
 1. The first line (first array element) has two variables: `$1` for the information to log and `$2` for the variable.
-2. The second lines has just `$0` to indicate your cursor final position so that you can go to a new line.
+2. The second line has just `$0` to indicate your final cursor position so that you can go to a new line.
 
 Voilà! You already have a first snippet that works. And that's just the beginning of what you can do with snippets.
 
@@ -79,9 +79,9 @@ Let's do another one: writing some code wrapped in a `try/catch` statement!
 
 That one is a little bit trickier to define:
 
-1. The first line of body only has the `try` statement
+1. The first line of the body only has the `try` statement
 2. The second line has a tab character (`\t`) to add some whitespaces and `$0` since this is where you'll finally write your code.
-3. The third line has the `catch` statement: Here we make use of placeholders to pre-define the alias of the error variable `${1:err}`.
+3. The third line has the `catch` statement: Here, we use placeholders to pre-define the alias of the error variable `${1:err}`.
 4. The fourth line allows to write the code in the `catch` statement
 
 ### Improved console snippet
@@ -107,7 +107,7 @@ For example, you can create an improved `console` snippet by choosing which meth
 
 From here, you can do a lot of powerful stuff in your editor. Bootstraping files can be much quicker than before!
 
-For example, I make use of [react-testing-library](https://testing-library.com/docs/react-testing-library/intro) for my tests and I have custom render methods in it. Writing a new test file can be quite long, so I can automate it with a snippet:
+For example, I use [react-testing-library](https://testing-library.com/docs/react-testing-library/intro) for my tests, and I have custom render methods in it. Writing a new test file can be quite long, so I can automate it with a snippet:
 
 ```json:title=javascript.json
 {
@@ -134,7 +134,7 @@ For example, I make use of [react-testing-library](https://testing-library.com/d
 
 ![Using the test snippet](./test.gif)
 
-- By using the variable `$3` multiple times, I am able to write once at different places in the code. It's really handy for the component name.
+- By using the variable `$3` multiple times, I can write once at different places in the code. It's really handy for the component name.
 - I am also able to choose which render method to use from a test utils file
 
 By defining all kinds of snippets, you can definitely **improve your workflow and save time!**
