--- a/content/blog/create-a-discord-bot-under-15-minutes/index.mdx
+++ b/content/blog/create-a-discord-bot-under-15-minutes/index.mdx
@@ -6,9 +6,9 @@ cover: "./cover.jpg"
 tags: [javascript, discord]
 ---
 
-As of today, Discord is one of the most popular chat apps, especially for gamers and devs. People love it because it's free, it's efficient, it's cross-platform, it's... well, you guessed it, it's awesome. One of the great things you can do on Discord is to integrate bots on servers in order to make it more interactive. As an example, you may have encountered one of them that congratulates you and upgrades your level after you've sent many messages in the server. Or another one that allows you to listen to music using commands, to kick or ban members, etc.
+Discord is one of the most popular chat apps, especially for gamers and devs. People love it because it's free, efficient, cross-platform, it's... well, you guessed it, it's awesome. One of the great things you can do on Discord is to integrate bots on servers to make it more interactive. As an example, you may have encountered one of them that congratulates you and upgrades your level after you've sent many messages on the server. Or another one that allows you to listen to music using commands, kick or ban members, etc.
 
-As I'm a developer, I wondered how to build a bot. How do I create commands? Listen to messages? Deploy a bot? Turns out it's easier than what I've thought. So, without further ado, let's get started on how to create a Discord bot.
+As I'm a developer, I wondered how to build a bot. How do I create commands? Listen to messages? Deploy a bot? Turns out it's easier than I've thought. So, without further ado, let's get started on how to create a Discord bot.
 
 _Note: I work mainly with JS. So you guessed it, this bot will be written in JS!_
 
@@ -25,7 +25,7 @@ As usual, you always have to do some setup when starting out a project. Here are
 
 Easy peasy!
 
-### Setup our local project
+### Setup our local project
 
 All right, no more talking. First, you will need to create a folder and initialize it:
 
@@ -35,13 +35,13 @@ cd my-bot
 npm init -y # generates you a minimal package.json file
 ```
 
-Then, we will need to import a library that allows us to interact with [Discord's API](https://discordapp.com/developers/docs). And luckily for us, there is one great JS wrapper called [discord.js](https://discord.js.org/#/). Let's add it to our project:
+We will then need to import a library that allows us to interact with [Discord's API](https://discordapp.com/developers/docs). And luckily for us, there is one great JS wrapper called [discord.js](https://discord.js.org/#/). Let's add it to our project:
 
 ```shell
 npm install discord.js
 ```
 
-If we take a look at their website, we can see they already provide us some code to get started, how nice is this. We'll shamelessly copy-paste their example.
+If we look at their website, we can see they already provide us some code to get started. How nice is this? We'll shamelessly copy-paste their example.
 
 ![Screenshot of Discord.js's website](./discordjs_website.png)
 
@@ -67,8 +67,8 @@ client.login("token")
 What does the code above do? Not so many things.
 
 - We require `discord.js`'s library and initialize it by calling `Client()`.
-- Then we listen for some events such as `ready` and `message` via the `on` method and we tell how to handle these events with a callback function.
-- At the end of the code, we call the `login`. It establishes a websocket connection to Discord. But, as you can see, we need to provide a token to that method. Indeed, Discord requires you to have a key/token in order to use their API. Thus, we'll grab one to make it work.
+- Then we listen for some events such as `ready` and `message` via the `on` method. We tell how to handle these events with a callback function.
+- At the end of the code, we call the `login`. It establishes a WebSocket connection to Discord. But, as you can see, we need to provide a token to that method. Indeed, Discord requires you to have a key/token to use their API. Thus, we'll grab one to make it work.
 
 ### Get that token
 
@@ -76,11 +76,11 @@ What does the code above do? Not so many things.
 
 ![Grabbing our token - step 1](./grab-token-1.png)
 
-2. Fill the **NAME** field and choose an avatar if you want. In my case, I chose to name it _Tommy the Bot_ and to make it look like Wall-E. Then click on **Save changes**. You should see a feedback message telling _"All your edits have been carefully recorded."_
+2. Fill in the **NAME** field and choose an avatar if you want. In my case, I decided to name it _Tommy the Bot_ and to make it look like Wall-E. Then click on **Save changes**. You should see a feedback message saying _"All your edits have been carefully recorded."_
 
 ![Grabbing our token - step 2](./grab-token-2.png)
 
-3. On the left panel, click on **Bot**, then click on **ADD BOT**.
+3. On the left panel, click on ** bot**, then click on **ADD BOT**.
 
 ![Grabbing our token - step 3](./grab-token-3.png)
 
@@ -112,11 +112,11 @@ client.on("message", (msg) => {
 client.login("YOUR_TOKEN")
 ```
 
-So far, we've done the setup, grabbed the token. There are two steps remaining: add our bot to a server and test it.
+So far, we've done the setup, grabbed the token. Two steps are remaining: add our bot to a server and test it.
 
 ### Add our bot to a server
 
-Now, we are going to add the bot to a server, but for that, we need at least one server. If you don't have yet created a server, here is how to do it (I recommend you to create a test server):
+Now, we will add the bot to a server, but we need at least one server for that. If you don't have yet created a server, here is how to do it (I recommend you to create a test server):
 
 1. After you logged in in [Discord](https://discordapp.com/), click on the **+** icon on your servers list:
 
@@ -146,7 +146,7 @@ Great. Now we're ready to add our bot to our server:
 
 ### Give life to your bot
 
-Our bot is on our server but it's offline. So let's make it alive. For development purposes, we will add [nodemon](https://nodemon.io/). It will allow us to reload our code as soon as it changes:
+Our bot is on our server, but it's offline. So let's make it alive. For development purposes, we will add [nodemon](https://nodemon.io/). It will allow us to reload our code as soon as it changes:
 
 ```shell
 npm install nodemon --save-dev
@@ -184,15 +184,15 @@ If all went well, you should see this in your terminal:
 
 ![Testing our bot - step 1](./test-bot-1.png)
 
-Go back to your Discord test server, you should see your bot online. Send _ping_ in the **general** channel, your bot will reply **Pong!**. Amazing!
+Go back to your Discord test server. You should see your bot online. Send _ping_ in the **general** channel, your bot will reply **Pong!**. Amazing!
 
 ![Testing our bot - step 2](./test-bot-2.png)
 
 ## Hide that token
 
-When you grabbed your token, you may have noticed that Discord hid it by default. They did it because it's a sensitive data. Indeed, you can do whatever you want with the bot with that token. So if somebody steals it, bad things can happen. As a consequence, we need to hide our token from the source code in case you push it on GitHub for example.
+When you grabbed your token, you may have noticed that Discord hid it by default. They did it because it's sensitive data. Indeed, you can do whatever you want with the bot with that token. So if somebody steals it, bad things can happen. Consequently, we need to hide our token from the source code in case you push it on GitHub, for example.
 
-To hide data, we use what we call environmental variables. Basically, we put what we want to hide or configuration variables into a file whose name is `.env`. This file should **never** be pushed on a public repository if it contains sensitive data. Create a new file called `.env` and paste the following:
+To hide data, we use what we call environmental variables. Basically, we put what we want to hide or configuration variables into a file named `.env`. This file should **never** be pushed on a public repository if it contains sensitive data. Create a new file called `.env` and paste the following:
 
 ```shell:title=.env
 BOT_TOKEN=YOUR_TOKEN_HERE
@@ -231,7 +231,7 @@ Go back to your server and make sure your bot is still online. Alternatively, yo
 
 So far, our bot replies **Pong!** whenever someone says ping. Let's face it, it's totally useless. One of the common features of bots is to welcome members and give them instructions as soon as they join the server. Therefore we will code our bot so that whenever someone joins the server, it will send a welcome message!
 
-There is a special event emitted when a user joins the server whose name is `guildMemberAdd`. The [member](https://discord.js.org/#/docs/main/stable/class/GuildMember) that just joined the server is passed as an argument and it has a loooot of methods including an interesting one called `send`. It will allow us to create a direct message between the bot and the new member:
+There is a special event emitted when a user joins the server whose name is `guildMemberAdd`. The [member](https://discord.js.org/#/docs/main/stable/class/GuildMember) that just joined the server is passed as an argument and it has a loooot of methods, including an interesting one called `send`. It will allow us to create a direct message between the bot and the new member:
 
 ```javascript:title=index.js
 require("dotenv").config()
@@ -257,18 +257,18 @@ client.login(process.env.BOT_TOKEN)
 
 To verify that everything works properly, invite a friend (or create another Discord account) and verify that they get the welcome message:
 
-1. Click on the server's name then click on **Invite People**.
-2. Copy the invitation's link and send the invitation link to the person you want to invite.
+1. Click on the server's name, then click on **Invite People**.
+2. Copy the invitation link and send the invitation link to the person you want to invite.
 3. Make sure the bot welcomes the person as soon as he joins the server.
 
 ## Kick them all
 
 Our bot starts to become interesting. Let's add a moderation feature: the ability to kick users by mentioning them. A simple `!kick @user` and **BAM!** The user is kicked out of the server. If we think of this feature, what should we do?
 
-1. Detect that we are trying to kick someone. For that we must verify the message received starts with `!kick`.
+1. Detect that we are trying to kick someone. For that, we must verify the message received starts with `!kick`.
 2. Get the user mentioned. We can access it easily by taking the first member mentioned in the message.
 3. As in every app, we must determine the edge cases. For example, a user could kick a user that doesn't exist or just say `!kick`. So we need to verify we've got a real member.
-4. One of the members may not be kickable (for example the server's adminstrator or a bot). A [`kickable`](https://discord.js.org/#/docs/main/stable/class/GuildMember?scrollTo=kickable) property exist on the `GuildMember` object to know it.
+4. One of the members may not be kickable (for example, the server's administrator or a bot). A [`kickable`](https://discord.js.org/#/docs/main/stable/class/GuildMember?scrollTo=kickable) property exist on the `GuildMember` object to know it.
 5. Kick the member. We can do so with the [`kick()`](https://discord.js.org/#/docs/main/stable/class/GuildMember?scrollTo=kick) method. It returns a Promise. If the Promise is resolved (the kick was successful), the bot will reply it has successfully kicked the user. If not, the bot will say it was unable to do so.
 
 Here is the full code (I got rid of the ping-pong feature):
@@ -308,15 +308,15 @@ client.login(process.env.BOT_TOKEN)
 
 ### Giving the permission to the bot
 
-> Wait. I tried to kick someone and that stupid bot keep saying me it can't kick that user!
+> Wait. I tried to kick someone, and that stupid bot keeps saying that it can't kick that user!
 
-That's normal. The bot doesn't have yet the permission to kick someone. Therefore, we'll create a **bot** role that gives the permission to kick members and we'll assign this role to our favorite little bot.
+That's normal. The bot doesn't yet have the permission to kick someone. Therefore, we'll create a **bot** role that gives permission to kick members, and we'll assign this role to our favorite little bot.
 
 1. Go to your Discord app and click on your server's name then on **Server Settings**
 
 ![Attributing a role to the bot - step 1](./role-1.png)
 
-2. Click on **Roles**, then on the + icon. Add a name to the role. Then, in the list of permissions, scroll until you find **Kick Members** and toggle the switch.
+2. Click on **Roles**, then on the + icon. Add a name to the role. Then, in the permissions list, scroll until you find **Kick Members** and toggle the switch.
 
 ![Attributing a role to the bot - step 2](./role-2.png)
 
@@ -332,7 +332,7 @@ As your app grows, you won't keep all your code in the `index.js` file. So, in t
 
 ### Events
 
-Currently we have three events: `ready` when the bot is ready, `message` each time a message is sent to the server, `guildMemberAdd` whenever a user joins the server. There are a lot of other events that you can find [in Discord's docs](https://discord.js.org/#/docs/main/stable/class/Client).
+Currently, we have three events: `ready` when the bot is ready, `message` each time a message is sent to the server, `guildMemberAdd` whenever a user joins the server. There are a lot of other events that you can find [in Discord's docs](https://discord.js.org/#/docs/main/stable/class/Client).
 
 To modularize our code, we will create an `events` folder. This folder will contain `.js` files whose name will match the different events name `discord.js` listens to:
 
@@ -341,7 +341,7 @@ To modularize our code, we will create an `events` folder. This folder will cont
 
 Get ready for the following, it's harder than what you've seen until here.
 
-For each `.js` file in the `events` folder, we will export a function which will be our **event handler**, that is to say, the function that runs each time the corresponding event is emitted. To do that, we will need to pass arguments to these event handlers such as `message`, `member`, etc.
+For each `.js` file in the `events` folder, we will export a function which will be our **event handler**: a function that runs each time the corresponding event is emitted. To do that, we will need to pass arguments to these event handlers such as `message`, `member`, etc.
 
 1. We need to work with files. Then in `index.js`, you have to import the [fs](https://nodejs.org/api/fs.html) module at the top of your file
 
@@ -401,7 +401,7 @@ fs.readdir("./events/", (err, files) => {
 })
 ```
 
-5. Update each event handler file with the associated function and of course don't forget to export the function.
+5. Update each event handler file with the associated function, and of course, don't forget to export the function.
 
 ```javascript:title=ready.js
 module.exports = (client) => {
@@ -461,7 +461,7 @@ Few lines of code but not so easy to understand. Pheeeew!
 
 ### Commands
 
-Bare with me, we're nearly finished with the bot. Look at `message.js`, only one command has been implemented and yet the file has already grown big. Imagine now if you add the ban feature or a music feature, it will become really complicated. Thus, the last step of the refactorization is to create a `commands` folder. This folder will contain the actions of the bot.
+Bear with me. We're nearly finished with the bot. Look at `message.js`, only one command has been implemented, yet the file has already grown big. Imagine now if you add the ban feature or a music feature, it will become really complicated. Thus, the last step of the refactorization is to create a `commands` folder. This folder will contain the actions of the bot.
 
 1. Create a `commands` folder at the root folder.
 2. Create a `kick.js` file and move all the code of `message.js` that is inside the if statement:
