--- a/content/blog/how-to-become-a-front-end-developer/index.mdx
+++ b/content/blog/how-to-become-a-front-end-developer/index.mdx
@@ -28,7 +28,7 @@ _Note: there's no partnership with the resources I included. I just found them w
 
 ### HTML and CSS
 
-HTML represents the structure of a web page and CSS its layout. You'll use these two technologies every day, so you need to get comfortable with this!
+HTML represents the structure of a web page, and CSS its layout. You'll use these two technologies every day, so you need to get comfortable with this!
 
 - Resources: You can check out [freeCodeCamp](https://www.freecodecamp.org/learn), especially the basic HTML and basic CSS sections.
 - Practice: build a simple page. Maybe a landing page or a cooking recipe.
@@ -44,26 +44,26 @@ That's what powers up your apps. It's a programming language that is important t
 
 ### CSS Framework
 
-Pure CSS is good. But it's not always easy to write some. Try to learn a CSS framework like [TailwindCSS](https://tailwindcss.com/), [Bulma](https://bulma.io/) or [Bootstrap](https://getbootstrap.com/). Such frameworks are often used in companies and it's important to get familiar with them.
+Pure CSS is good. But it's not always easy to write some. Try to learn a CSS framework like [TailwindCSS](https://tailwindcss.com/), [Bulma](https://bulma.io/) or [Bootstrap](https://getbootstrap.com/). Such frameworks are often used in companies, and it's important to get familiar with them.
 
-- Resources: Tailwind CSS as a set of [screencasts](https://tailwindcss.com/course/setting-up-tailwind-and-postcss) if you're interested. Generally just, reading the docs of the CSS frameworks are enough.
-- Practice: improve the page you build while learning HTML and CSS or the app you built with JavaScript, it's your choice!
+- Resources: Tailwind CSS as a set of [screencasts](https://tailwindcss.com/course/setting-up-tailwind-and-postcss) if you're interested. Generally just, reading the docs of the CSS frameworks is enough.
+- Practice: improve the page you build while learning HTML and CSS or the app you created with JavaScript. It's your choice!
 
 ### Version control (Git & GitHub)
 
 Version control is useful for working together on the same project. You can't escape it, so get comfortable with `git commit,` `git push,` or branches. You also need to learn how to work with a source code management platform such as [GitHub](https://github.com), [GitLab](https://about.gitlab.com)
 
 - Resources: [Guides from GitHub](https://guides.github.com) especially the [beginner one](https://guides.github.com/activities/hello-world/).
-- Practice: Create an account on GitHub. Add the previous projects you made (landing page, to-do app, or anything code-related you did), it'll make you practice the famous `git status` `git add`, `git commit`, `git push`.
+- Practice: Create an account on GitHub. Add the previous projects you made (landing page, to-do app, or anything code-related you did). It'll make you practice the famous `git status` `git add`, `git commit`, `git push`.
 
 ### JS Framework
 
 Most companies don't work with pure JS. They use a **framework** that allows them to be more productive and write great apps. There are three leading solutions on the market right now: React, Vue, and Angular (though it tends to be less used). **React and Vue are the most popular**, so I strongly recommend learning one of them to optimize your chances of getting hired.
 
-By learning a JS framework, you'll learn package managers such as [npm](https://www.npmjs.com) and [yarn](https://yarnpkg.com). You'll also learn some tooling and how to interact with APIs. Don't worry, the resources I included below cover all of this.
+By learning a JS framework, you'll learn package managers such as [npm](https://www.npmjs.com) and [yarn](https://yarnpkg.com). You'll also learn some tooling and how to interact with APIs. Don't worry. The resources I included below cover all of this.
 
 - Resource: [An excellent React course from Tyler McGinnis](https://tylermcginnis.com/courses/react/). Once finished, you can also take the [React hooks one](https://tylermcginnis.com/courses/react-hooks/) to learn the latest technologies. Alternatively, there's Andrei Neagoie, who created a complete course: [Complete React Developer](https://www.udemy.com/course/complete-react-developer-zero-to-mastery/). On the Vue side, you can rely on [Vue Mastery](https://www.vuemastery.com/courses-path/beginner) or [Vue School](https://vueschool.io/courses), especially [The Vue.js Master Class](https://vueschool.io/courses/the-vuejs-master-class).
-- Practice: you can build a more advanced app here. Maybe a weather app, a movie search app or if you want, you can make a second version of a to-do app.
+- Practice: you can build a more advanced app here. Maybe a weather app, a movie search app, or if you want, you can make a second version of a to-do app.
 - Blog posts: [Getting Started with Vue](https://thomlom.dev/getting-started-with-vue/) and [How to Create an App with Vue CLI](https://thomlom.dev/how-to-create-an-app-with-vue/). Check them out to have a taste of Vue if you're learning React. I also wrote a post related to tooling for React: [How to Setup ESLint and Prettier for Your React Apps](https://thomlom.dev/setup-eslint-prettier-react/).
 
 ### Modern CSS
@@ -71,7 +71,7 @@ By learning a JS framework, you'll learn package managers such as [npm](https://
 CSS is back again! Now that you know how to build an app with a JS framework, you need to get advanced CSS skills: Flexbox, Grid, preprocessors, the whole thing! It may be interesting to look into CSS-in-JS solutions like [Emotion](https://emotion.sh/docs/introduction).
 
 - Resource: [Advanced CSS and Sass](https://www.udemy.com/course/advanced-css-and-sass/) from Jonas Schmedtmann. You'll learn how to build well-designed pages on top of it!
-- Practice: remember the landing page you built? Revamp it with your new shiny CSS skills. It may also be a good time to build a first version of your portfolio.
+- Practice: remember the landing page you built? Revamp it with your new shiny CSS skills. It may also be a good time to build the first version of your portfolio.
 
 Trust me or not, but that's **all you need to know to get hired as a junior front-end developer.** Most companies know that you can't know everything. They're also interested in your career path. They know you'll gain more and more knowledge as time goes by.
 
@@ -95,7 +95,7 @@ When building apps, there's always a point when you're not confident when it com
 
 ### Accessibility
 
-You need to know how to build apps with accessibility in mind. **Developers often forget accessibility, but it shouldn't be the case**. Think of all your users, including these who may be blind,colorblind, or use a voice reader.
+You need to know how to build apps with accessibility in mind. **Developers often forget accessibility, but it shouldn't be the case**. Think of all your users, including those who may be blind, colorblind, or use a voice reader.
 
 - Resources: Another course from Frontend Masters by Marcy Sutton: [Accessibility in JavaScript applications](https://frontendmasters.com/courses/javascript-accessibility/)
 - Practice: make an accessibility audit in one of your previous apps. Spot the problems and replace them with accessible solutions.
@@ -111,7 +111,7 @@ Our world moves fast. We want everything right now. That's the same for apps; us
 
 Without search engines, you can't find anything on the internet. SEO is about optimizing your sites so that anyone can quickly discover your website with the right keywords.
 
-- Resources: [Ahrefs](https://ahrefs.com/), one of the reference tool for SEO has some great guides such as the following: [SEO Basics: Beginner’s Guide to SEO Success](https://ahrefs.com/blog/seo-basics/)
+- Resources: [Ahrefs](https://ahrefs.com/), one of the reference tool for SEO, has some great guides such as the following: [SEO Basics: Beginner’s Guide to SEO Success](https://ahrefs.com/blog/seo-basics/)
 - Practice: if you already have a portfolio, improve its SEO.
 
 ### SSR
@@ -132,8 +132,8 @@ Usually, this is not your job. These skills are for designers mostly. Designers 
 
 On top of that, start-ups can't always afford a designer. Thus, knowing how to design, even if it's not much, is a big +1 for them!
 
-- Resources: [Refactoring UI](https://refactoringui.com/book/) is a great book on design. I've heard lately of [Shift Nudge](https://shiftnudge.com/) for getting the best UI skills. It's pricey, but it's worth it in my opinion.
-- Practice: design is like any skills, the more you'll practice, the better you'll get, period. For that, you can tackle the [Daily UI challenge.](https://www.dailyui.co/)
+- Resources: [Refactoring UI](https://refactoringui.com/book/) is a great book on design. I've heard lately of [Shift Nudge](https://shiftnudge.com/) for getting the best UI skills. It's pricey, but it's worth it, in my opinion.
+- Practice: design is like any skill. The more you'll practice, the better you'll get, period. For that, you can tackle the [Daily UI challenge.](https://www.dailyui.co/)
 - Blog posts: [How to Suck Less at Colors as a Developer](https://thomlom.dev/how-to-suck-less-at-colors/) and [Why Learning Design Is Important for Front-End Developers](https://thomlom.dev/why-learn-design-developer/)
 
 ### Databases and servers
@@ -167,13 +167,13 @@ Project ideas:
 - A [Todoist clone](https://www.youtube.com/watch?v=hT3j87FMR6M)
 - Anything you think of?
 
-If you don't feel confident in your back-end skills, look into [Firebase](https://firebase.google.com/), it's a powerful tool that is relatively easy to use.
+If you don't feel confident in your back-end skills, look into [Firebase](https://firebase.google.com/). It's a powerful tool that is relatively easy to use.
 
 ### Technical blog
 
 It's also a great idea to start a blog and learn to write technical posts, **even if you're not an expert in your field**. Having such a blog shows both your writing and technical skills. On top of that, you reinforce your learning!
 
-You can create a blog with [Gatsby](https://www.gatsbyjs.com/), in particular, with [this blog starter](https://github.com/gatsbyjs/gatsby-starter-blog). In terms of posts ideas, it's up to you. The world is your oyster here. Pick a topic and write about it.
+You can create a blog with [Gatsby](https://www.gatsbyjs.com/), in particular, with [this blog starter](https://github.com/gatsbyjs/gatsby-starter-blog). In terms of post ideas, it's up to you. The world is your oyster here. Pick a topic and write about it.
 
 ### Portfolio
 
@@ -198,7 +198,7 @@ Now is the time to find a job. That's a tough one because many companies are all
 - If a company is looking for a developer with at least one or two years of professional experience, **apply!** Some companies put these kinds of criteria to have an entry barrier. You may be a great fit, so **apply**.
 - You don't have to match every skill the company is looking for. Really. If they list TypeScript and you don't know TypeScript, that's OK. You can still apply.
 - If you need to craft a motivational letter, **personalize it**. The more you craft it for the company, the more it will have an impact.
-- **Attend meetups in your city or online.** That's where you'll get contacts and exchange with other developers, product managers or designers. Companies usually sponsor meetups to hire more people.
+- **Attend meetups in your city or online.** That's where you'll get contacts and exchange with other developers, product managers, or designers. Companies usually sponsor meetups to hire more people.
 
 For the job search itself, you may find opportunities on [LinkedIn](https://www.linkedin.com), so you'll have to create a profile on it and put your projects there!
 
@@ -210,21 +210,21 @@ I don't know what's the exact interview process for all companies. But I know ho
 
 1. You **apply** to a job or someone contacts you, usually someone from the Human Resources department.
 2. You have a **phone call**, or you meet in person the HR. You talk about your previous experiences, who you are, what you're searching for, the company, etc.
-3. You have a **technical test**, usually with a front-end developer of the company, a tech lead, or the CTO. You'll have to answer technical questions. It's also possible that you have a take-home project to do and then gives the company's source code. If that's the case, polish it!
-4. You **meet the founders of the company** or persons leading the company. They usually want to know whom they hire, so you'll discuss more the company, your motivations, etc. Depending on the company's size, it may not happen.
+3. You have a **technical test**, usually with a company's front-end developer, a tech lead, or the CTO. You'll have to answer technical questions. It's also possible that you have a take-home project to do and then give the company's source code. If that's the case, polish it!
+4. You **meet the founders of the company** or persons leading the company. They usually want to know whom they hire, so you'll discuss the company, your motivations, etc. Depending on the company's size, it may not happen.
 5. If all goes well, you get an **offer**! Don't necessarily take the company with the best offer. Salary is an essential part of the job, but your happiness, how you feel in the company, and your career path matters too!
 
 Let me warn you: sometimes, the process can be quite long.
 
-Here are some advises for you to succeed:
+Here are some advice for you to succeed:
 
-- **Be professional, but stay relaxed.** You're not interviewing for a bank. The first time I went to an interview, I was surprised at how chill the persons were. So, no pressure (Don't be too chill though, find the sweet spot 😄)
+- **Be professional but stay relaxed.** You're not interviewing for a bank. The first time I went to an interview, I was surprised at how chill the persons were. So, no pressure (Don't be too chill though, find the sweet spot 😄)
 - **Show you're motivated** by the project. Unfortunately, getting hired for a first job is hard because you don't have previous experiences. However, you can show how much you want the job and contribute to the company.
 - **Adapt your speech** to the person you're speaking to. Don't get too much in technical details if you talk to someone whose job is related to business.
 - **Don't underestimate soft skills.** The interviewer will try to see if you can fit for the job and whether he can work with you or not, especially the persons in tech! Show how great it would be to work with you: communicate, smile, and stay humble. If you need to know which soft skills to get, I wrote a post on the [soft skills every developer should have](https://thomlom.dev/soft-skills-developers/).
 - **Don't lie during interviews.** If you don't know something, then you don't know. It's no big deal if you can't answer all the questions. Experienced developers don't like bull-shit developers.
-- **Developers always make trade-offs.** There's rarely a one-size-fits-all solution. Show that you are aware of that and that you think about **what brings value to the company**. It demonstrates that you have deep thoughts, and it's much appreciated.
+- **Developers always make trade-offs.** There's rarely a one-size-fits-all solution. Show that you are aware of that and think about **what brings value to the company**. It demonstrates that you have deep thoughts, and it's much appreciated.
 
-Ok, that was a long one. As said previously, becoming a developer is a long but rewarding path! I hope it gave you some insights on how you get a job.
+OK, that was a long one. As said previously, becoming a developer is a long but rewarding path! I hope it gave you some insights into how you get a job.
 
-<Comments description="Do you see something missing in the resources? Do you need advises? Don't hesitate to reach out in the comments!" />
+<Comments description="Do you see something missing in the resources? Do you need advice? Don't hesitate to reach out in the comments!" />
