--- a/content/blog/resources-advanced-javascript/index.mdx
+++ b/content/blog/resources-advanced-javascript/index.mdx
@@ -9,8 +9,8 @@ tags: [javascript]
 JavaScript has never been more used than today. It's a real asset to get good at it. When discovering JavaScript, you first learn variables, if statements, loops, arrays, objects, functions! Maybe you even know what is `this` and how to use `async/await`.
 But that's just the tip of the iceberg. There's more to JavaScript you need to learn.
 
-To get better at JavaScript, you need to deeply understand its foundations, how it works under the hood. That can be a daunting task. But don't worry, I got your back!
-I read and watched a lot of resources to get better at JavaScript, and I want to share that with you today.
+To better understand JavaScript, you need to deeply understand its foundations and how it works under the hood. That can be a daunting task. But don't worry, I got your back!
+I read and watched many resources to get better at JavaScript, and I want to share that with you today.
 
 ## Topics to learn
 
@@ -42,11 +42,11 @@ This is a JavaScript pillar that you can't escape, so you better learn what it m
 
 ### This, call, apply and bind
 
-Ah, `this`. With a misunderstanding of `this`, you can often get common errors like `Cannot read property 'name' of undefined` or `greet is not a function` in your programs. Tania Rascia broke down these concepts for you in one of her posts: [Understanding This, Bind, Call, and Apply in JavaScript](https://www.taniarascia.com/this-bind-call-apply-javascript/).
+Ah, `this`. With a misunderstanding of `this`, you can often get common errors like `Cannot read property 'name' of undefined` or `greet is not a function` in your programs. Tania Rascia broke down these concepts for you in her post [Understanding This, Bind, Call, and Apply in JavaScript](https://www.taniarascia.com/this-bind-call-apply-javascript/).
 
 ### Promises and async/await
 
-ES2015 made JavaScript developers' life more comfortable by bringing promises which allow you to write simpler asynchronous code. Learn what they mean by reading [What is a Promise?](https://medium.com/javascript-scene/master-the-javascript-interview-what-is-a-promise-27fc71e77261) from Eric Elliott or [JavaScript Promises for Dummies](https://scotch.io/tutorials/javascript-promises-for-dummies) on Scotch.io. You can also watch a great talk from Wes Bos on [Async/Await](https://www.youtube.com/watch?v=DwQJ_NPQWWo).
+ES2015 made JavaScript developers' lives more comfortable by bringing promises that allowed you to write simpler asynchronous code. Learn what they mean by reading [What is a Promise?](https://medium.com/javascript-scene/master-the-javascript-interview-what-is-a-promise-27fc71e77261) from Eric Elliott or [JavaScript Promises for Dummies](https://scotch.io/tutorials/javascript-promises-for-dummies) on Scotch.io. You can also watch a great talk from Wes Bos on [Async/Await](https://www.youtube.com/watch?v=DwQJ_NPQWWo).
 
 ### Modules
 
@@ -58,7 +58,7 @@ We already know that JavaScript is a multi-paradigm language. One paradigm suppo
 
 ## Courses
 
-There are a lot of resources when it comes to learning JavaScript as you saw it above, and it may be overwhelming. Don't worry. If you prefer to get a single course, I got your back too:
+There are many resources for learning JavaScript, as you saw above, and it may be overwhelming. Don't worry. If you prefer to get a single course, I got your back too:
 
 - [Advanced JavaScript](https://tylermcginnis.com/courses/advanced-javascript/) from Tyler Mc Ginnis: I used many resources from him previously. That's because he has a whole course on that. It'll make you, for sure, a more proficient JavaScript developer.
 - [Advanced JavaScript Concepts](https://www.udemy.com/course/advanced-javascript-concepts/) from Andrei Neagoie: he has released many popular courses before this one. You'll find anything you need to know to become an advanced JS developer.
