--- a/content/blog/save-time-github-cli/index.mdx
+++ b/content/blog/save-time-github-cli/index.mdx
@@ -6,7 +6,7 @@ cover: "./cover.jpg"
 tags: [tools]
 ---
 
-What if I told you it's possible to manage your GitHub repository within the CLI? No more pointing and clicking on a user interface, just commands. That would mean a faster work with less context-switching, right? Brace yourself. GitHub's official command line is right here for you.
+What if I told you it's possible to manage your GitHub repository within the CLI? No more pointing and clicking on a user interface, just commands. That would mean faster work with less context-switching, right? Brace yourself. GitHub's official command line is right here for you.
 
 Triaging issues, creating or checking out pull requests, releasing packages, forking repos, even creating gists can now be done from your terminal. And we all know its power and how fast it can be. Using GitHub CLI has been a real win for my workflow. Want to learn more? It all happens down here. 👇
 
@@ -70,7 +70,7 @@ EXAMPLES
 ...
 ```
 
-That's quite helpful. Most of the time, you'll use core commands. To know what you can do with each of them, provide an `--help` option. Here's an example with the `issue` command:
+That's quite helpful. Most of the time, you'll use core commands. Use the `--help` option to know what you can do with each of them. Here's an example with the `issue` command:
 
 ```sh
 ➜ gh issue --help
@@ -106,13 +106,13 @@ EXAMPLES
 ...
 ```
 
-Now, I don't want to explain to you each command. You can find on the official GitHub CLI website a [well-explained manual of all these commands](https://cli.github.com/manual/). What I'm going to show you instead are examples of how this CLI can improve your workflow in your everyday developer's life.
+Now, I don't want to explain to you each command. On the official GitHub CLI website, you can find a [well-explained manual of all these commands](https://cli.github.com/manual/). Instead, I'm going to show you examples of how this CLI can improve your workflow in your everyday developer's life.
 
 ## Examples
 
 ### Create a PR
 
-Let's say you work on a brand new feature for your company or open-source project. You finished the work and want to create a PR on GitHub. Usually, you would have gone to [github.com](https://github.com) to open the PR, right? Well now, you can do exactly the same with `gh pr create`:
+Let's say you work on a brand new feature for your company or open-source project. You finished the work and want to create a PR on GitHub. Usually, you would have gone to [github.com](https://github.com) to open the PR, right? Well, now, you can do exactly the same with `gh pr create`:
 
 ```sh
 ➜ gh pr create
@@ -131,7 +131,7 @@ Creating pull request for feat/signup into master in company/repo
 
 As you can see, this command is interactive. I provided the title, the body in VS Code, and then submitted the PR in a snap.
 
-If you were to provide some metadata such as the reviewers, assignees, or labels, you could also do it by selecting `Add metadata`:
+Suppose you were to provide some metadata such as the reviewers, assignees, or labels. In that case, you could also do it by selecting `Add metadata`:
 
 ```
 ? What's next? Add metadata
@@ -170,14 +170,14 @@ Requesting a code review from you
 How convenient this command is. I know at a glance what's going on with your PRs:
 
 - **Current branch**: I'm working on a fix
-- **Created by you**: My fix has some checks pending and I didn't get any reviews yet. I also have another opened PR that passes the checks, but I haven't received any reviews as well.
+- **Created by you**: My fix has some checks pending, and I didn't get any reviews yet. I also have another opened PR that passes the checks, but I haven't received any reviews.
 - **Requesting a code review from you**: A PR on documentation has passed the checks and I need to give my review.
 
 If I were to review the docs PR, I could simply type `gh pr view 231`, and view the PR on the terminal or on the web using the `--web` option.
 
 ### Waiting for Travis
 
-Let's say your PR is already opened and you got some review comments. You worked through your comments, pushed your code and wanted to know if you can merge the PR. Maybe you've set up Travis CI, and you're waiting for the build to pass:
+Let's say your PR is already opened and you got some review comments. You worked through your comments, pushed your code, and wanted to know if you can merge the PR. Maybe you've set up Travis CI, and you're waiting for the build to pass:
 
 ```sh
 > gh pr checks
@@ -201,7 +201,7 @@ gh pr merge
 
 Developers, when reviewing code, tend to focus on the code only. It's indeed faster, but perhaps it's worth it to check out the changes live. It allows you to have a better vision of what the code really implies and its value.
 
-Now, you can check out your colleague's branch with GitHub CLI. Use the `pr checkout` along with the pull request's number and you're good to go:
+Now, you can check out your colleague's branch with GitHub CLI. Use the `pr checkout` along with the pull request's number, and you're good to go:
 
 ```sh
 gh pr checkout 6838
