--- a/content/blog/why-learn-design-developer/index.mdx
+++ b/content/blog/why-learn-design-developer/index.mdx
@@ -15,7 +15,7 @@ Let's see what learning design can bring you in terms of benefits.
 
 ## Better value in your team
 
-There's a standard workflow you can find across tech companies (especially start-ups). They have product owners and managers, a design team, a development team (both front-end and back-end). The product owners think of the new features with the team. The designer produces mockups. The back-end developers provide the endpoints to call, and you, front-end developers, are responsible for making the mockups alive.
+There's a standard workflow you can find across tech companies (especially start-ups). They have product owners and managers, a design team, a development team (both front-end and back-end). The product owners think of the new features with the team. The designer produces mockups. The back-end developers provide the endpoints to call. You, front-end developers, are responsible for making the mockups alive.
 
 In an ideal world, you have a design team, and they think of all the edge cases you can encounter:
 
@@ -26,11 +26,11 @@ In an ideal world, you have a design team, and they think of all the edge cases 
 
 In real life, you don't necessarily have a design team, and when you have one, they're not always available because they have a lot of work. In this case, you can sometimes be blocked. It may be because the mockups are missing or because you want the opinion of one of your fellow designers that are not available at the moment.
 
-Knowing design is a considerable value for your team. It doesn't mean you have to replace the designer's work. On the contrary, it can even be complementary. You can build a basic design in case you need to do a proof of concept for something your company wants to test. Or if your designer forgets an edge case, you can also handle it without waiting for their input.
+Knowing design is a considerable value for your team. It doesn't mean you have to replace the designer's work. On the contrary, it can even be complementary. You can build a basic design if you need to do a proof of concept for something your company wants to test. Or, if your designer forgets an edge case, you can also handle it without waiting for their input.
 
 It also means you're more efficient when building UIs. You are quicker and more detailed. I often see developers who blindly copy-paste the values they get from Zeplin or InVision mockups. The thing is, these values can be incorrect, and it results in inconsistencies in your app. When you know how it's actually made off, you don't fall into these traps.
 
-Furthermore, knowing to design can be a great asset in case of negotiation. You can bring up the fact that not only can you cover the technical part of a project but also the design part, which, ultimately, results in fewer costs for the company and higher benefits for you. It's what we call a win-win.
+Furthermore, knowing to design can be a great asset in case of negotiation. You can bring up the fact that you can cover the technical part of a project and the design part, which, ultimately, results in fewer costs for the company and higher benefits for you. It's what we call a win-win.
 
 ## Better side-projects design
 
@@ -42,13 +42,13 @@ Knowing how to code and how to design also makes you more independent. You can b
 
 ## Better communication with designers
 
-Communication in a team is vital. I've already written about it in a previous blog post about [soft skills](https://thomlom.dev/soft-skills-developers/). A front-end developer will have to communicate with its colleagues, back-end developers, product owners, managers, but also designers! When you go along with a designer and that you truly work together, it can do wonders in your team.
+Communication in a team is vital. I've already written about it in a previous blog post about [soft skills](https://thomlom.dev/soft-skills-developers/). A front-end developer will have to communicate with its colleagues, back-end developers, product owners, managers, and designers! When you go along with a designer and that you truly work together, it can do wonders in your team.
 
-Indeed, I'm sure you already got a stunning mockup that was really complex to build. If it ever happens, please, don't complain. Don't shout out loud that the designer is dumb, is not realistic and knows nothing about code. Instead, cooperate and think of an alternative solution.
+Indeed, I'm sure you already got a stunning mockup that was really complex to build. If it ever happens, please, don't complain. Don't shout out loud that the designer is dumb, is not realistic, and knows nothing about code. Instead, cooperate and think of an alternative solution.
 
-Once, I told a designer an alternative solution to a feature and his reaction was, _"Oh, it's actually possible to do this? I didn't go with this in the first place because I thought it was too hard for you"_. Being proactive and using your design skills in these situations can save time and, consequently, money (and companies like you when you're saving money for them).
+Once, I told a designer an alternative solution to a feature, and his reaction was, _"Oh, it's actually possible to do this? I didn't go with this in the first place because I thought it was too hard for you"_. Being proactive and using your design skills in these situations can save time and, consequently, money (and companies like you when you're saving money for them).
 
-Another case when you can use both your communication and design skills is when you have to build a design system. You can work hand-in-hand with a designer and create something consistent with your brand, powerful and easy to use.
+Another case when you can use both your communication and design skills is when you have to build a design system. You can work hand-in-hand with a designer and create something consistent with your brand, powerful, and easy to use.
 
 ## What to learn
 
@@ -62,7 +62,7 @@ Ok, so now you're sold on the fact that you need to learn design. What should yo
 - Colors
 - Typography
 - Icons
-- Base components: buttons, inputs, headers, cards and more.
+- Base components: buttons, inputs, headers, cards, and more.
 - Etc.
 
 <Comments />
