--- a/content/blog/3-ways-boost-web-app-performance/index.mdx
+++ b/content/blog/3-ways-boost-web-app-performance/index.mdx
@@ -6,25 +6,25 @@ cover: "./cover.jpg"
 tags: [javascript]
 ---
 
-When building a web application, there's something you absolutely need to take account: **performance.** Your app may be greatly designed or have some killer features, nobody will use it if it's not performant. Users are not patient. But how can one make an app more performant? Well, the less your browser has stuff to do, the faster it will be, right? Then, a great strategy to boost your app performance is to give the browser less work, that is to say, reduce the amount of stuff to load. There are easy ways to do so and we'll take a look at three of them today.
+When building a web application, there's something you absolutely need to take into account: **performance.** Your app may be greatly designed or have some killer features, nobody will use it if it's not performant. Users are not patient. But how can one make an app more performant? Well, the less your browser has stuff to do, the faster it will be, right? Then, a great strategy to boost your app performance is to give the browser less work, that is to say, reduce the amount of stuff to load. There are easy ways to do so, and we'll take a look at three of them today.
 
 ## Optimize your images
 
-This is the most easiest thing and one of the most common mistakes you can find out there. When integrating images on an app, you've been told to use the pictures with the highest resolution to have the best quality images. That's great. What you haven't been told is that the images you use from [Unsplash](https://unsplash.com/) or [Pexels](https://www.pexels.com/) often have huge dimensions and are not meant to be displayed on smaller screens.
+This is the easiest thing and one of the most common mistakes you can find out there. When integrating images on an app, you've been told to use the pictures with the highest resolution to have the best quality images. That's great. What you haven't been told is that the images you use from [Unsplash](https://unsplash.com/) or [Pexels](https://www.pexels.com/) often have huge dimensions and are not meant to be displayed on smaller screens.
 
-It's like watching a 10GB 4K movie on an old tiny computer. 4K or not, you won't see many differences. That's the same for images on a website. Thus, you must **reduce the quality and resize the images** in order to make them smaller.
+It's like watching a 10GB 4K movie on an old tiny computer. 4K or not, you won't see many differences. That's the same for images on a website. Thus, you must **reduce the quality and resize the images** to make them smaller.
 
-There are plenty of apps that allows you to do so like [squoosh.app](https://squoosh.app/). For example, you can find below an example of an image whose size was reduced on squoosh:
+There are plenty of apps that allow you to do so, like [squoosh.app](https://squoosh.app/). For example, you can find below an example of an image whose size was reduced on squoosh:
 
 ![Resize and reduce the quality of a nature image](./image-resize.png)
 
-Sure the image on the right is a little bit blurry and less detailed than the one of the left but at this zoom level, it's still looking good to me and it's also **96%** smaller which means your browser loads **5.2MB** less.
+Sure the image on the right is a little bit blurry and less detailed than the one on the left, but at this zoom level, it's still looking good to me, and it's also **96%** smaller, which means your browser loads **5.2MB** less.
 
 ## Code splitting
 
 If you're building single-page applications (SPA) with [client-side rendering](https://www.toptal.com/front-end/client-side-vs-server-side-pre-rendering) (as with [create-react-app](https://create-react-app.dev/docs/getting-started/) or [Vue CLI](https://cli.vuejs.org/) for example), this tip will also boost your app with little efforts.
 
-In fact, client-side rendering means you are basically fetching on the server a bare bons HTML document with a JavaScript file (called a [bundle](https://webpack.js.org/#bundle-it)) containing your whole application logic. This approach makes your app longer to load initially but more rich in terms of interaction and route changes. It's a problem since a **long initial load will be perceived badly** by your users.
+In fact, client-side rendering means you are basically fetching on the server a bare bons HTML document with a JavaScript file (called a [bundle](https://webpack.js.org/#bundle-it)) containing your whole application logic. This approach makes your app longer to load initially but richer in terms of interaction and route changes. It's a problem since a **long initial load will be badly perceived** by your users.
 
 In fact, you will ship to the client this big JavaScript file **even if your users don't need to use every features of the application** (typically a settings page when you can change your name or modify your password).
 
@@ -53,15 +53,15 @@ const App = () => (
 );
 ```
 
-With that approach, if the users want to browse your products, they won't need to load the code associated to the Cart or the Settings page.
+With that approach, if the users want to browse your products, they won't need to load the code associated with the Cart or the Settings page.
 
-It can make your initial load way faster by saving hundreds and hundreds of KB, especially if your other pages use heavy third party libraries, which bring us to the third and last point.
+It can make your initial load way faster by saving hundreds and hundreds of KB. Especially if your other pages use heavy third-party libraries, which brings us to the third and last point.
 
 ## Reduce the bundle size
 
 We saw how to reduce the bundle size at the initial load. Here we will see how to reduce it but **globally** this time.
 
-Few months ago, I was working on a side-project and I tried to load my app in a [slow 3G mode](https://developers.google.com/web/tools/chrome-devtools/network#throttle). I found it really slow and I thought something must be going wrong with the bundle. I installed a tool to analyze the bundle (we'll see which tool later don't worry 😉) and I found a pretty big package in my bundle called `moment-timezone` though I never installed it. I didn't understand why since timezones were useless to my app. Turns out I was using a time picker which needed `moment-timezone` making it included in the bundle! So, I chose another time picker and my app was **2x** faster if my memory doesn't play tricks on me.
+A few months ago, I worked on a side-project and tried to load my app in a [slow 3G mode](https://developers.google.com/web/tools/chrome-devtools/network#throttle). I found it really slow, and I thought something must be going wrong with the bundle. I installed a tool to analyze the bundle (we'll see which tool later, don't worry 😉). I found a pretty big package in my bundle called `moment-timezone` though I never installed it. I didn't understand why since timezones were useless to my app. Turns out I was using a time picker that needed `moment-timezone`, making it included in the bundle! So, I chose another time picker, and my app was **2x** faster if my memory doesn't play tricks on me.
 
 I'm convinced every developer working on the front-end side already had or has this problem. Then I'll show you a method to make your bundle lighter.
 
@@ -106,13 +106,13 @@ I ran `source-map-explorer` on a small project so you can see the bundle is not 
 
 ### Then, get rid of heavy dependencies
 
-Once you have the results, it's up to you to see which dependencies are the heaviest and decide if you must find alternatives for them. To find the cost of a package in your bundle, I recommend [bundlephobia](https://bundlephobia.com/). It's great for **comparing packages** cost and making you wonder if you really need to install that dependency.
+Once you have the results, it's up to you to see which dependencies are the heaviest and decide if you must find alternatives for them. To find the package's cost in your bundle, I recommend [bundlephobia](https://bundlephobia.com/). It's great for **comparing packages** cost and making you wonder if you really need to install that dependency.
 
-For example, I used to use [moment.js](https://momentjs.com/) for date manipulation. But it has a pretty big cost on your package:
+For example, I used to use [moment.js](https://momentjs.com/) for date manipulation. But it has a pretty high cost on your package:
 
 ![Cost of moment in your package](./moment.png)
 
-In fact, `moment` is not modular. If you need to manipulate dates, then you need to create a `Moment` instance that gives you access to a lot of methods even if you use just one or two of them.
+In fact, `moment` is not modular. If you need to manipulate dates, you need to create a `Moment` instance that gives you access to many methods even if you use just one or two of them.
 
 Now, I use [date-fns](https://date-fns.org/) which is way more modular and lighter too:
 
@@ -121,7 +121,7 @@ Now, I use [date-fns](https://date-fns.org/) which is way more modular and light
 You can follow the same logic for a lot of dependencies. However, **be pragmatic** when making these choices:
 
 - If you use a package that seems to be both useless and heavy, it may be a good idea to **get rid of it.**
-- If it's useful and heavy, then you can start searching for **lighter alternatives.** If there are no alternatives, it can be a great idea to build your own package (it can take time though 😅). But if it seems complicated, then keep it. It's not that bad to have heavy dependencies if they prove to be really useful. It's always possible in that case to lazy load these packages thanks to code splitting!
+- If it's useful and heavy, then you can start searching for **lighter alternatives.** If there are no alternatives, it can be a great idea to build your own package (it can take time, though 😅). But if it seems complicated, then keep it. It's not that bad to have heavy dependencies if they prove to be really useful. It's always possible in that case to lazy load these packages thanks to code splitting!
 
 ---
 
