--- a/content/blog/how-to-build-reusable-and-accessible-switch-vue/index.mdx
+++ b/content/blog/how-to-build-reusable-and-accessible-switch-vue/index.mdx
@@ -9,28 +9,28 @@ tags: [vue]
 
 There are a lot of different UI components you can find on an app. The ones you'll find the most will probably be buttons, inputs, forms, or images. They are so common that HTML even provides default elements for them! However, it's not rare to encounter lesser-known components that you have to build by yourself.
 
-We started building our design system within my company and I found myself working on the switch component, something like this:
+We started building our design system within my company, and I found myself working on the switch component, something like this:
 
 ![A screenshot of a toggle switch](./switch.png)
 
-At first, it seems like a simple UI component. But building it can be tricky when you need to take into account all the different states, its accessibility and its reusability.
+At first, it seems like a simple UI component. But building it can be tricky when you need to consider all the different states, its accessibility, and its reusability.
 
 Well, lucky you! Today I'm going to share with you how you can do the same.
 
-_Note: though I'm building it with Vue, the concepts can easily be applied to another framework such as React. Also, I'm using Vue 3 but don't be scared, there are not many differences with Vue 2 here!_ 😉
+_Note: though I'm building it with Vue, the concepts can easily be applied to another framework such as React. Also, I'm using Vue 3 but don't be scared. There are not many differences with Vue 2 here!_ 😉
 
 ## A bit of conception
 
-Before jumping straight to your keyboard and start coding, you have few things to consider, especially the purpose of the switch. Indeed, a switch can be used in two ways:
+Before jumping straight to your keyboard and start coding, you have few things to consider, especially the switch's purpose. Indeed, a switch can be used in two ways:
 
 1. To turn on or off something (as you would do with a light switch)
-2. To select between two choices (a theme switcher for example)
+2. To select between two choices (a theme switcher, for example)
 
 It's essential to know which use case is the right one for you because it impacts the underlying implementation. In our case, we're going to go for the first use case.
 
-Additionally, we want to be able to label a toggle switch so that the user knows what is going to happen if he toggles the switch or not.
+Additionally, we want to label a toggle switch so that the user knows what is going to happen if he toggles the switch.
 
-Let's look at a real-world example where a user would choose whether he wants to receive a newsletter. You can think of a first implementation where you would use a `checked` prop, a `label` prop and a `toggle` event:
+Let's look at a real-world example where a user would choose to receive a newsletter. You can think of a first implementation where you would use a `checked` prop, a `label` prop and a `toggle` event:
 
 ```html
 <Switch
@@ -46,7 +46,7 @@ That's good. But we can achieve the same result by using [`v-model`](https://v3.
 <Switch v-model:checked="shouldReceiveNewsletter" label="Receive newsletter" />
 ```
 
-If you're familiar with Vue you might be surprised with the use of `v-model` in the example above. That's one of the changes introduced by Vue 3: you can now use an argument name directly on the template. The code above passes a `checked` prop to `<Switch>` that you can update by emitting an `update:checked` event.
+If you're familiar with Vue, you might be surprised with the use of `v-model` in the example above. That's one of the changes introduced by Vue 3: you can now use an argument name directly on the template. The code above passes a `checked` prop to `<Switch>` that you can update by emitting an `update:checked` event.
 
 ## Build the template
 
@@ -152,7 +152,7 @@ Let's face it, it's ugly as hell. To make it prettier, we'll add CSS classes to 
 </template>
 ```
 
-We'll do them one by one. First, the `.container`. We know the text is going to be on the right of the switch, and we want it to be perfectly centered. We also want the whole toggle to be clickable so let's add a pointer cursor to it:
+We'll do them one by one. First, the `.container`. We know the text will be on the right of the switch, and we want it to be perfectly centered. We also want the whole toggle to be clickable so let's add a pointer cursor to it:
 
 ```html
 <style scoped>
@@ -196,7 +196,7 @@ _Note: the properties are inspired by the `.sr-only` class from [Tailwind CSS](h
 
 ![A screenshot of a toggle switch](./switch.png)
 
-As you can see, the switch is composed of a rounded container element with a circle inside of it that moves to the left or to the right depending on whether the input is checked or not.
+As you can see, the switch is composed of a rounded container element with a circle inside of it. This circle moves to the left or to the right depending on whether the input is checked or not.
 
 If you look at the screenshot, you can see that the inner circle is roughly half the size of the container element. The container width has twice the size of its own height. Let's make use of CSS custom properties for that:
 
@@ -357,7 +357,7 @@ We have one last thing to check. Look at the screenshot below:
 
 ![A screenshot of a switch that is not responsive](./not-responsive-switch.png)
 
-If you have a long label, you can see that the text overflows on the switch and may take multiple lines. That's not responsive, is it? Let's make sure our switch can't shrink and the label doesn't take more than one line:
+If you have a long label, you can see that the text overflows on the switch and may take multiple lines. That's not responsive, is it? Let's make sure our switch can't shrink, and the label doesn't take more than one line:
 
 ```css
 .switch {
@@ -379,12 +379,12 @@ Now, our switch is responsive:
 
 ![A screenshot of a switch that is responsive](./responsive-switch.png)
 
-Voilà! We're done for the switch. The switch is a small piece of UI but it's not that easy to implement. Here are the main takeaways when building such a component:
+Voilà! We're done for the switch. The switch is a small piece of UI, but it's not that easy to implement. Here are the main takeaways when building such a component:
 
 - Think of your component's API beforehand and its use cases. You'll have a better vision of what you want to build.
 - Don't forget to think of the different constraints of a UI component: its accessibility, its various states, its responsiveness, etc.
 - Build your component step by step. You should have an iterative approach with these kinds of components.
 
-In case, you want to have the full code, I put it in a GitHub Gist that you can get [here](https://gist.github.com/thomlom/4d2149161ec8c6d3fdfe530baf328c40), how nice is that? 😄
+In case, you want to have the full code, I put it in a GitHub Gist that you can get [here](https://gist.github.com/thomlom/4d2149161ec8c6d3fdfe530baf328c40). How nice is that? 😄
 
 <Comments />
