--- a/content/blog/reverse-engineering-airbnb-internationalization-library/index.mdx
+++ b/content/blog/reverse-engineering-airbnb-internationalization-library/index.mdx
@@ -6,11 +6,11 @@ cover: "./cover.jpeg"
 tags: [javascript]
 ---
 
-Curiosity is one of the most important developer's assets. By being curious and experimenting things, you make sure you're constantly learning and upgrading your skills. Few weeks ago, I had to implement internationalization for an app I was working on. I chose to use [Polyglot](http://airbnb.io/polyglot.js/) because of its simplicity. It's also created by Airbnb, a company that has many great [open sources libraries](https://airbnb.io/projects/).
+Curiosity is one of the most essential developer's assets. By being curious and experimenting with things, you make sure you're continually learning and upgrading your skills. A few weeks ago, I had to implement internationalization for an app I was working on. I chose to use [Polyglot](http://airbnb.io/polyglot.js/) because of its simplicity. It's also created by Airbnb, a company with many great [open sources libraries](https://airbnb.io/projects/).
 
-When I used Polyglot, I wondered what was going on under the hood. So I decided to do a little bit of reverse-engineering by diving into the source code. And here I am, sharing with you, what I've learnt along the way.
+When I used Polyglot, I wondered what was going on under the hood. So I decided to do a little bit of reverse-engineering by diving into the source code. And here I am, sharing with you what I've learned along the way.
 
-You'll find many code snippets below. Most of them come from the [source code of Polyglot](https://github.com/airbnb/polyglot.js/blob/master/index.js) itself. The goal of this article is to give you more explanations about that code, its purpose and its use.
+You'll find many code snippets below. Most of them come from the [source code of Polyglot](https://github.com/airbnb/polyglot.js/blob/master/index.js) itself. This article aims to give you more explanations about that code, its purpose, and its use.
 
 ## Recap about the library
 
@@ -38,7 +38,7 @@ Notice how Polyglot handles **nested objects.**
 If you want to add more phrases to the Polyglot instance, you can use the `extend` method:
 
 ```javascript
-polyglot.extend({
+Polyglot.extend({
   bye: "Bye!",
 });
 ```
@@ -56,7 +56,7 @@ polyglot.t("welcome", { name: "Thomas" }); // Welcome Thomas
 If you don't provide one of the interpolation value, Polyglot will return your placeholder as-is. It can be useful if you want to do partial interpolation:
 
 ```javascript
-polyglot.extend({
+Polyglot.extend({
   user: "My name is %{name}. I love %{hobby}!",
 });
 
@@ -82,7 +82,7 @@ Finally, Polyglot handles pluralization, that is to say, express a sentence in t
 ```javascript
 polyglot.locale(); // 'en'
 polyglot.extend({
-  thing: "There is %{smart_count} thing |||| There are %{smart_count} things",
+  thing: "There is %{smart_count} thing |||| There are %{smart_count} things",
 });
 
 polyglot.t("thing", { smart_count: 1 }); // There is 1 thing
@@ -91,13 +91,13 @@ polyglot.t("thing", { smart_count: 1 }); // There is 1 thing
 Giving a number as a second argument also works:
 
 ```javascript
-polyglot.t("thing", 4); // There are 4 things
+Polyglot.t("thing", 4); // There are 4 things
 ```
 
 If you need to set the locale, you have two choices:
 
 - Call the `locale` method with its corresponding code
-- Provide the locale during the instanciation
+- Provide the locale during the instantiation
 
 ```javascript
 polyglot.locale("fr");
@@ -157,7 +157,7 @@ const polyglot = new Polyglot(); // phrases -> {}
 const polyglot = new Polyglot({ phrases: { hello: "Hello" } }); // extend({hello: 'Hello'}) is called
 ```
 
-Polyglot makes use of what we call **short-circuit evaluation**. This complex term means JavaScript takes advantage of logical operators such as `||` (OR) to evaluate just what's necessary. Thus, if `options` is `undefined` or `null`, JavaScript will assign `{}` to `opts` as the first operand evaluates to false. But if `options` is set, it won't even look at the rest of the expression and will assign `options` to `opts`.
+Polyglot makes use of **short-circuit evaluation**. This complicated term means JavaScript takes advantage of logical operators such as `||` (OR) to evaluate just what's necessary. Thus, if `options` is `undefined` or `null`, JavaScript will assign `{}` to `opts` as the first operand evaluates to false. But if `options` is set, it won't even look at the rest of the expression and assign `options` to `opts`.
 
 Polyglot uses `extend` to map a given key to a given phrase in its internal `phrases` object. We'll come back to it in a few moments.
 
@@ -173,7 +173,7 @@ function Polyglot(options) {
 }
 ```
 
-The `currentLocale` is set to a given locale or `en` and a mysterious `tokenRegex` is created. These properties are important for the interpolation and pluralization.
+The `currentLocale` is set to a given locale or `en` and a mysterious `tokenRegex` is created. These properties are important for interpolation and pluralization.
 
 Then, when we'll call `t` with a given key, Polyglot will search its associated value in the internal `phrases` object. Once found, it will apply to the phrase some transformations (interpolation and pluralization) and return it:
 
@@ -194,19 +194,19 @@ Polyglot.prototype.t = function (key, options) {
 
 _"What an odd way to declare a method"_, you might say. Why not simply use the `class` keyword?
 
-Because JavaScript is constantly evolving. At the time this library was written, there were no such thing as classes (as well as `const` and `let`), it was only introduced in 2015. So we had to create classes by using **constructor functions**.
+Because JavaScript is continuously evolving. When this library was written, there were no such things as classes (as well as `const` and `let`). It was only introduced in 2015. So we had to create classes by using **constructor functions**.
 
-But, functions being functions, it's not efficient to put all methods inside a constructor function. That would mean that every function inside the constructor function would be created at each instanciation!
+But, functions being functions, it's not efficient to put all methods inside a constructor function. That would mean that every function inside the constructor function would be created at each instantiation!
 
 That's why there is a `prototype` property inside every function: **by putting a method in the `prototype` property, you share it across all instances of your function.** Check out [this resource](https://tylermcginnis.com/beginners-guide-to-javascript-prototype/) to learn more about prototypes.
 
-By the way, classes in JavaScript are also **constructor functions.** Go ahead and define a `class`, you'll see its type is `Function`. Interesting, isn't it?
+By the way, classes in JavaScript are also **constructor functions.** Go ahead and define a `class`. You'll see its type is `Function`. Interesting, isn't it?
 
 ## Extend
 
-The most attentives of you will think _"But what if our `phrases` object has inner objects? I don't see how `t` handles the nested objects? It only transforms the phrase if the type of the phrase is a string, right?"_
+The most attentive of you will think _"But what if our `phrases` object has inner objects? I don't see how `t` handles the nested objects? It only transforms the phrase if the type of the phrase is a string, right?"_
 
-That's a legit question. As said in the recap, Polyglot handles nested phrases objects. Under the hood, It uses the `extend` method to add new phrases to the instance. This method processes recursively all the keys in the object passed as an argument and put them at the root level of the internal `phrases` object. Each nested key is concatenated with the one that's one level above it using the dot notation:
+That's a legit question. As said in the recap, Polyglot handles nested phrases objects. Under the hood, It uses the `extend` method to add new phrases to the instance. This method recursively processes all the keys in the object passed as an argument and puts them at the root level of the internal `phrases` object. Each nested key is concatenated with the one that's one level above it using the dot notation:
 
 ```javascript
 var forEach = require("for-each");
@@ -229,7 +229,7 @@ Polyglot.prototype.extend = function (morePhrases, prefix) {
 };
 ```
 
-**Note**: Polyglot uses a package called [for-each](https://github.com/Raynos/for-each) to iterate over both objects and arrays. It acts as a polyfill so that Polyglot doesn't require added methods like `Array.prototype.forEach`. If you wonder what is the third `this` argument passed to `forEach`, it allows to specify what is `this` in the callback function (the second argument). In our case, `this` refers to an instance of Polyglot.
+**Note**: Polyglot uses a package called [for-each](https://github.com/Raynos/for-each) to iterate over both objects and arrays. It acts as a polyfill so that Polyglot doesn't require added methods like `Array.prototype.forEach`. Suppose you wonder what the third `this` argument passed to `forEach` is. In that case, it allows specifying what is `this` in the callback function (the second argument). In our case, `this` refers to an instance of Polyglot.
 
 Let's see what happens if you call `extend` like this:
 
@@ -251,7 +251,7 @@ polyglot.extend({
 
 - It's exactly the same behavior for `register`.
 
-That way, you make sure you traverse all your object and map every key to a string value in the **flattened** `phrases` object. After calling `extend`, your `phrases` look like this:
+That way, you make sure you traverse all your objects and map every key to a string value in the **flattened** `phrases` object. After calling `extend`, your `phrases` look like this:
 
 ```javascript
 {
@@ -261,7 +261,7 @@ That way, you make sure you traverse all your object and map every key to a stri
 }
 ```
 
-Note that `extend` actually extends the `phrases` object and **doesn't replace it.** The only things that can be replaced are the conflicting keys. For example if you call `extend` with an object which has a `hello` key and that key already exists in `phrases`, the old key will be replaced with the new one.
+Note that `extend` actually extends the `phrases` object and **doesn't replace it.** The only things that can be replaced are the conflicting keys. For example, if you call `extend` with an object with a `hello` key and that key already exists in `phrases`, the old key will be replaced with the new one.
 
 ## Interpolation
 
@@ -275,7 +275,7 @@ if (typeof phrase === "string") {
 
 We'll dive into its code to understand how one can build the interpolation feature.
 
-Here, the interpolation feature consists in replacing a generic word by another one in an object. What's great is that [`String.prototype.replace`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replace) does most of the work for us. Indeed, according to MDN, The `replace` method returns a new string with some or all matches of a pattern replaced by a replacement. Then, you just need to define a regular expression to capture what you need to replace and fetch the corresponding word in the `options` object.
+Here, the interpolation feature consists of replacing a generic word with another one in an object. What's great is that [`String.prototype.replace`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replace) does most of the work for us. Indeed, according to MDN, The `replace` method returns a new string with some or all matches of a pattern replaced by a replacement. You just need to define a regular expression to capture what you need to replace and fetch the corresponding word in the `options` object.
 
 ```javascript
 var has = require("has");
@@ -314,13 +314,13 @@ function transformPhrase(phrase, substitutions, locale, tokenRegex) {
 }
 ```
 
-This is how interpolation is done under the hood. Not less, not more. But there are things you may be unfamiliar with like `call` or `String.prototype.replace`.
+This is how interpolation is done under the hood. Not less, not more. But you may be unfamiliar with things like `call` or `String.prototype.replace`.
 
 Three essential things are done before calling `transformPhrase`:
 
 - We **require** the `has` package which is a shortcut for `Object.prototype.hasOwnProperty.call`.
 - We **cache** the `String.prototype.replace` method.
-- We create the `defaultRegexToken` that will be used to match the generic words in our phrases. Basically, this regex means _"match anything that is included inside `%{}`"_. Note that this regular expression is **lazy** (`.*?`) instead of **greedy** (`.*`). In other words, it means this regexp will capture the smallest group possible.
+- We create the `defaultRegexToken` used to match the generic words in our phrases. Basically, this regex means _"match anything that is included inside `%{}`"_. Note that this regular expression is **lazy** (`.*?`) instead of **greedy** (`.*`). In other words, it means this regexp will capture the smallest group possible.
 
 That being said, we can learn how `transformPhrase` behaves.
 
@@ -339,23 +339,23 @@ result = result.replace(interpolationRegex, function (expression, argument) {
 });
 ```
 
-The second argument of `replace` can either have the form of a string or a function. Here we use the function because we need to retrieve the value associated to the eventual generic word in the options. This function will be run on every match with the following arguments:
+The second argument of `replace` can either have the form of a string or a function. Here we use the function because we need to retrieve the eventual generic word's value in the options. This function will be run on every match with the following arguments:
 
 - `expression`: refers to the match itself, `%{name}` for example.
-- `argument`: refers to the captured group (`(.*?)`), that is to say everything inside the interpolation syntax. By default, it is everything inside `%{}`.
+- `argument`: refers to the captured group (`(.*?)`), that is to say, everything inside the interpolation syntax. By default, it is everything inside `%{}`.
 
-If the captured string is a property of the `options` object passed to `t` and is different than `null`, then we return its associated value otherwise we return the expression itself. The returned value will be used as a replacement for the match.
+If the captured string is a property of the `options` object passed to `t` and is different than `null`, then we return its associated value otherwise, we return the expression itself. The returned value will be used as a replacement for the match.
 
 Let's apply it on an example to fully understand it:
 
 ```javascript
-polyglot.extend({
+Polyglot.extend({
   user: "Hi, your name is %{name}. You are a %{job} and you like %{hobby}.",
 });
 
 polyglot.t("user", {
   name: "Thomas",
-  hobby: "Traveling",
+  hobby: "traveling",
 });
 ```
 
@@ -365,15 +365,15 @@ We call `replace` on the phrase `'Hi, your name is %{name}. You are a %{job} and
 
 1. `expression` = `%{name}`, `argument` = `name`. Is `name` in the options object? **Yes**, then return the associated value: `Thomas`.
 2. `expression` = `%{job}`, `argument` = `job`. Is `job` in the options object? No, return the expression: `%{job}`.
-3. `expression` = `%{hobby}`, `argument` = `hobby`. Is `hobby` in the options object? Yes, then return the associated value: `Traveling`.
+3. `expression` = `%{hobby}`, `argument` = `hobby`. Is `hobby` in the options object? Yes, then return the associated value: `traveling`.
 
-The result of the translation is: `Hi, your name is Thomas. You are a %{job} and you like Traveling.` That's not rocket science after all! 😉
+The result of the translation is: `Hi, your name is Thomas. You are a %{job}, and you like traveling.` That's not rocket science, after all! 😉
 
 ### Custom interpolation syntax
 
-Now that we saw how to implement interpolation, let's see how to customize the interpolation syntax. Indeed, Polyglot allows you to customize the prefix and the suffix so that you can use `{{name}}` or `|name|` instead of `%{name}`.
+We saw how to implement interpolation. Let's see how to customize the interpolation syntax. Indeed, Polyglot allows you to customize the prefix and the suffix so that you can use `{{name}}` or `|name|` instead of `%{name}`.
 
-_"Easy"_, you might think. _"Just change the regex!_". And you would be right, that's what Polyglot does. It uses a custom regex called `tokenRegex` that is built when you create an instance of Polyglot:
+_"Easy"_, you might think. _"Just change the regex!_". And you would be right. That's what Polyglot does. It uses a custom regex called `tokenRegex` that is built when you create an instance of Polyglot:
 
 ```javascript
 function Polyglot(options) {
@@ -418,24 +418,24 @@ function constructTokenRegex(opts) {
 }
 ```
 
-There are two things to consider though:
+There are two things to consider, though:
 
 - It's not possible to choose a prefix or a suffix that is equal to `||||` as it's used for pluralization.
-- We **must escape** the prefix and the suffix. But why is that? Well, you'll probably use special characters such as `{`, or `[` or maybe `*`. However, these symbols are special regex characters so we need to escape them with a backslash. That's the responsibility of the `escape` function. It will replace the regex symbol by a backslash followed by the matched symbol (corresponds to `$&`).
+- We **must escape** the prefix and the suffix. But why is that? Well, you'll probably use special characters such as `{`, or `[` or maybe `*`. However, these symbols are special regex characters, so we need to escape them with a backslash. That's the responsibility of the `escape` function. It will replace the regex symbol with a backslash followed by the matched symbol (corresponds to `$&`).
 
 As an example, `constructTokenRegex({ prefix: '[[', suffix: ']]' })` returns `/\[\[(.*?)\]\]/g` (and not `/[[(.*?)]]/g` ⚠️).
 
 ## Smart count and plural groups
 
-Now the second part of `transformPhrase`: pluralization. That one can be tough to build. Indeed, you have to make it possible for Polyglot to choose a phrase among others both based on a number and a locale. But a language can be radically different from another, plural forms included. For example, did you know that there are no plural forms in Chinese but there are six in Arabic? Or that in French, zero is singular while it's plural in English? To make pluralization happen, we need to take account of all these rules.
+Now the second part of `transformPhrase`: pluralization. That one can be tough to build. Indeed, you have to make it possible for Polyglot to choose a phrase among others both based on a number and a locale. But a language can be radically different from another, plural forms included. For example, did you know that there are no plural forms in Chinese, but there are six in Arabic? Or that in French, zero is singular while it's plural in English? To make pluralization happen, we need to take account of all these rules.
 
 **Note**: If you're interested, here are the other [plural rules](http://www.unicode.org/cldr/charts/33/supplemental/language_plural_rules.html).
 
 Roughly speaking, here's what Polyglot does:
 
 1. Reference all possible rules and map them to the corresponding locales.
-2. When you translate a phrase which need to be pluralized (with the `smart_count` option), split it in multiple phrases based on a delimiter. Thus, you get an array of phrases (more precisely, all the plural forms of the phrase).
-3. Retrieve the rule associated to the locale given to Polyglot. This rule takes a number as a parameter and returns another number indicating which plural form to choose.
+2. When you translate a phrase that need to be pluralized (with the `smart_count` option), split it in multiple phrases based on a delimiter. Thus, you get an array of phrases (more precisely, all the plural forms of the phrase).
+3. Retrieve the rule associated with the locale given to Polyglot. This rule takes a number as a parameter and returns another number indicating which plural form to choose.
 4. Returns the correct phrase using the number returned by the rule (which acts as an **array index**).
 
 We are going to detail this step by step.
@@ -519,7 +519,7 @@ var pluralTypeToLanguages = {
 };
 ```
 
-You can see for example that for a german rule (which includes english), we return the plural form if the number is different than one, otherwise we return the singular form.
+You can see, for example, that for a german rule (which includes English), we return the plural form if the number is different than one, otherwise, we return the singular form.
 
 Now we can focus on the pluralization part of `transformPhrase`. Here we will take account of the `locale` parameter. The `currentLocale` value of Polyglot is passed to `transformPhrase` when calling `t`:
 
@@ -529,7 +529,7 @@ if (typeof phrase === "string") {
 }
 ```
 
-To make pluralization happen, you need to add a `smart_count` in your options (`substitutions` object). Note that you can also pass a number instead of an options object. Polyglot will take account of that shortcut and transform it back to an options object with a `smart_count` property.
+To make pluralization happen, you need to add a `smart_count` in your options (`substitutions` object). Note that you can also pass a number instead of an options object. Polyglot will take that shortcut and transform it back to an options object with a `smart_count` property.
 
 ```javascript
 var trim = require("string.prototype.trim");
@@ -571,16 +571,16 @@ function transformPhrase(phrase, substitutions, locale, tokenRegex) {
 }
 ```
 
-**Step two**. If we do have a `smart_count` option, we split the phrase in multiple parts thanks to the delimiter (`||||`). As we are caching `split`, we need to invoke the function on `result` thanks to the `call` method. For example:
+**Step two**. If we do have a `smart_count` option, we split the phrase into multiple parts thanks to the delimiter (`||||`). As we are caching `split`, we need to invoke the `result` function thanks to the `call` method. For example:
 
 ```javascript
 var phrase = "I have one thing |||| I have many things";
 phrases.split("||||"); // ['I have one thing ', ' I have many things']
 ```
 
-Then, **step 3**. We need to retrieve the rule associated to our locale. This happens thanks to the `pluralTypeIndex` function.
+Then, **step 3**. We need to retrieve the rule associated with our locale. This happens thanks to the `pluralTypeIndex` function.
 
-Basically, `pluralTypeIndex` takes a locale and a count and it invokes one of the functions defined in `pluralTypes` with `count` as a parameter. It can be `arabic(3)` for example.
+Basically, `pluralTypeIndex` takes a locale and a count. It invokes one of the functions defined in `pluralTypes` with `count` as a parameter. It can be `arabic(3)`, for example.
 
 ```javascript
 function pluralTypeIndex(locale, count) {
@@ -588,7 +588,7 @@ function pluralTypeIndex(locale, count) {
 }
 ```
 
-Nevertheless, we need to know beforehand to which language rule our locale refers to. That's what `pluralTypeName` does.
+Nevertheless, we need to know beforehand which language rules our locale refers to. That's what `pluralTypeName` does.
 
 ```javascript
 function langToTypeMap(mapping) {
@@ -613,7 +613,7 @@ function pluralTypeName(locale) {
 
 After building the map that associates a locale to the correct plural rule, we lookup in this map for the value of the given locale.
 
-You have to deal with one edge case here. Indeed, the locale can sometimes be composed and missing in the corresponding map. In that case, we first try to return the rule associated to the first part of the locale. Otherwise we return the one associated to `en` (`german`).
+You have to deal with one edge case here. Indeed, the locale can sometimes be composed and missing in the corresponding map. In that case, we first try to return the rule associated with the first part of the locale. Otherwise, we return the one associated to `en` (`german`).
 
 If you struggle to see what the `langToPluralType` map looks like, here is an extract:
 
@@ -645,7 +645,7 @@ However, in the case of `en-US`, it doesn't correspond to anything in the map, s
 
 Finally, in `pluralTypeIndex`, we can invoke the correct language rule to the function with the count. The result of that function will be trimed as there may be some whitespaces between the end (or beginning) of the phrase and `||||`.
 
-**Note**: As we are thinking in terms of indexes, it implies that your phrases should be delimited in an ascending order and that you should be exhaustive on the possible plural forms your phrase may take. Otherwise Polyglot may just return the first phrase.
+**Note**: We are thinking in terms of indexes. It implies that your phrases should be delimited in ascending order and that you should be exhaustive on the possible plural forms your phrase may take. Otherwise, Polyglot may just return the first phrase.
 
 Let's recap pluralization on an example:
 
@@ -690,7 +690,7 @@ Here the `locale` is `fr`.
 
 ## Other features
 
-Are you still with me? Great. The next methods are pretty easy to understand, they act more as utilities instead as a feature on their own.
+Are you still with me? Great. The next methods are pretty easy to understand. They act more as utilities instead as a feature on their own.
 
 ### Unset
 
@@ -753,7 +753,7 @@ Polyglot.prototype.has = function (key) {
 The `locale` method has two behaviors:
 
 - If a new locale is provided, set the internal `currentLocale` to it.
-- Otherwise return the current locale.
+- Otherwise, return the current locale.
 
 ```javascript
 Polyglot.prototype.locale = function (newLocale) {
@@ -762,16 +762,16 @@ Polyglot.prototype.locale = function (newLocale) {
 };
 ```
 
-## What I've learnt
+## What I've learned
 
-We're done for the code! Reverse-engineering a library is a great way to upgrade your skills. By diving into the code source of Polyglot, I had the opportunity to enhance my knowledge of:
+We're done with the code! Reverse-engineering a library is a great way to upgrade your skills. By diving into the code source of Polyglot, I had the opportunity to enhance my knowledge of:
 
 - How to handle the internationalization in an application
-- Prototypes, the prototype chain and closures
+- Prototypes, the prototype chain, and closures
 - Regular expressions and their use in `String.prototype.replace`
 - Using `call` to apply a function to another object
 - The plural rules specific to each language
 
-I'm convinced that the most effective way to learn is by learning from real-world examples and by practicing. Theory is great to a certain extent. I highly encourage you to do more of reverse-engineering and I hope that this article gave you the will to do so.
+I'm convinced that the most effective way to learn is by learning from real-world examples and practicing. The theory is great to a certain extent. I highly encourage you to do more reverse-engineering, and I hope that this article gave you the will to do so.
 
 <Comments />
